Styling fix for search on IE

--- a/src/public/stylesheets/application.css
+++ b/src/public/stylesheets/application.css
@@ -333,3 +333,7 @@ strong.highlight4 {
 input[type=search] {
     width: 15em;
 }
+
+#searchButton {
+    display: none;
+}
